# hybrid-rag-structured

./: .env.example  .gitignore  EVALS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/evaluation/: __init__.py  __main__.py  evaluator.py  metrics.py
src/ingestion/: __init__.py  __main__.py  bm25_index.py  chunker.py  embeddings.py  ingest.py
src/retrieval/: __init__.py  __main__.py  hybrid.py  query.py
src/storage/: __init__.py  database.py  models.py
tests/: conftest.py  test_bm25_index.py  test_chunker.py  test_embeddings.py  test_hybrid.py  test_query.py
tests/evaluation/: test_metrics.py
